@@ -2228,7 +2228,7 @@ int SPVM_yylex(SPVM_YYSTYPE* yylvalp, SPVM_COMPILER* compiler) {
 
               // A symbol name can't contains "::::".
               if (symbol_name_length >= 4 && strstr(symbol_name, "::::")) {
-                SPVM_COMPILER_error(compiler, "The symbol name \"%s\" can't can't contains \"::::\" at %s line %d", symbol_name, compiler->cur_file, compiler->cur_line);
+                SPVM_COMPILER_error(compiler, "The symbol name \"%s\" can't contains \"::::\" at %s line %d", symbol_name, compiler->cur_file, compiler->cur_line);
               }
 
               // A symbol name can't start with a number "0-9".
@@ -2237,6 +2237,11 @@ int SPVM_yylex(SPVM_YYSTYPE* yylvalp, SPVM_COMPILER* compiler) {
 
             // A string literal of the left operand of the fat camma
             if (next_is_fat_camma) {
+              // A symbol name can't contains "::::".
+              if (symbol_name_length >= 2 && strstr(symbol_name, "::")) {
+                SPVM_COMPILER_error(compiler, "The string literal of the left operand of the fat camma \"%s\" can't can't contains \"::\" at %s line %d", symbol_name, compiler->cur_file, compiler->cur_line);
+              }
+
               SPVM_OP* op_constant = SPVM_OP_new_op_constant_string(compiler, symbol_name, symbol_name_length, compiler->cur_file, compiler->cur_line);
               yylvalp->opval = op_constant;
               token = CONSTANT;
